--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#Configuration
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/INVENTORY
+spring.datasource.username=root
+spring.datasource.password=Dalegendkiller1
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
